y.output
Terminals unused in grammar

   KEYWORD
   SIGN
   SINGLE_LINE_COMMENT
   MULTI_LINE_COMMENT
   RIGHT
   UMINUS
   UPLUS
   USTAR


Rules useless in parser due to conflicts

   78 identifier_opt: IDENTIFIER


State 27 conflicts: 21 shift/reduce
State 28 conflicts: 21 shift/reduce
State 30 conflicts: 21 shift/reduce
State 31 conflicts: 21 shift/reduce
State 32 conflicts: 1 reduce/reduce
State 38 conflicts: 2 reduce/reduce
State 42 conflicts: 21 shift/reduce
State 62 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce
State 94 conflicts: 3 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 2 shift/reduce
State 103 conflicts: 1 shift/reduce
State 249 conflicts: 2 shift/reduce
State 250 conflicts: 2 shift/reduce
State 295 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

    6 declaration_list_opt: declaration_list
    7                     | epsilon

    8 epsilon: /* empty */

    9 declaration_list: declaration
   10                 | declaration_list declaration

   11 statement: labeled_statement
   12          | compound_statement
   13          | expression_statement
   14          | selection_statement
   15          | iteration_statement
   16          | jump_statement

   17 labeled_statement: IDENTIFIER COLON statement
   18                  | CASE constant_expression COLON statement
   19                  | DEFAULT COLON statement

   20 compound_statement: CURLY_OPEN block_item_list CURLY_CLOSE
   21                   | CURLY_OPEN CURLY_CLOSE

   22 block_item_list: block_item
   23                | block_item_list block_item

   24 block_item: statement
   25           | declaration

   26 expression_statement: expression_opt SEMI_COLON

   27 expression_opt: epsilon
   28               | expression

   29 selection_statement: IF PARAN_OPEN expression PARAN_CLOSE statement
   30                    | IF PARAN_OPEN expression PARAN_CLOSE statement ELSE statement
   31                    | SWITCH PARAN_CLOSE expression PARAN_CLOSE statement

   32 iteration_statement: WHILE PARAN_OPEN expression PARAN_CLOSE statement
   33                    | DO statement WHILE PARAN_OPEN expression PARAN_CLOSE SEMI_COLON
   34                    | FOR PARAN_OPEN expression_opt SEMI_COLON expression_opt SEMI_COLON expression_opt PARAN_CLOSE statement
   35                    | FOR PARAN_OPEN declaration SEMI_COLON expression_opt SEMI_COLON expression_opt PARAN_CLOSE statement

   36 jump_statement: GOTO IDENTIFIER SEMI_COLON
   37               | CONTINUE SEMI_COLON
   38               | BREAK SEMI_COLON
   39               | RETURN expression_opt SEMI_COLON

   40 constant_expression: /* empty */

   41 declaration: declaration_specifiers init_declarator_list_opt

   42 declaration_specifiers_opt: epsilon
   43                           | declaration_specifiers

   44 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   45                       | type_specifier declaration_specifiers_opt
   46                       | type_qualifier declaration_specifiers_opt
   47                       | function_specifier declaration_specifiers_opt

   48 init_declarator_list_opt: epsilon
   49                         | init_declarator_list

   50 init_declarator_list: init_declarator
   51                     | init_declarator_list COMMA init_declarator

   52 init_declarator: declarator
   53                | declarator EQUAL initializer

   54 storage_class_specifier: EXTERN
   55                        | STATIC
   56                        | AUTO
   57                        | REGISTER

   58 type_specifier: VOID
   59               | CHAR
   60               | SHORT
   61               | INT
   62               | LONG
   63               | FLOAT
   64               | DOUBLE
   65               | SIGNED
   66               | UNSIGNED
   67               | _BOOL
   68               | _COMPLEX
   69               | _IMAGINARY
   70               | enum_specifier

   71 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
   72                         | type_qualifier specifier_qualifier_list_opt

   73 specifier_qualifier_list_opt: epsilon
   74                             | specifier_qualifier_list

   75 enum_specifier: ENUM identifier_opt CURLY_OPEN enumerator_list CURLY_CLOSE
   76               | ENUM identifier_opt CURLY_OPEN enumerator_list COMMA CURLY_CLOSE
   77               | ENUM IDENTIFIER

   78 identifier_opt: IDENTIFIER
   79               | epsilon

   80 enumerator_list: enumerator
   81                | enumerator_list COMMA enumerator

   82 enumerator: enumeration_constant
   83           | enumeration_constant EQUAL constant_expression

   84 enumeration_constant: IDENTIFIER

   85 type_qualifier: CONST
   86               | RESTRICT
   87               | VOLATILE

   88 function_specifier: INLINE

   89 declarator: pointer_opt direct_declarator

   90 pointer_opt: epsilon
   91            | pointer

   92 direct_declarator: IDENTIFIER
   93                  | PARAN_OPEN declarator PARAN_CLOSE
   94                  | direct_declarator SQ_OPEN type_qualifier_list_opt assignment_expression_opt SQ_CLOSE
   95                  | direct_declarator SQ_OPEN STATIC type_qualifier_list_opt assignment_expression SQ_CLOSE
   96                  | direct_declarator SQ_OPEN type_qualifier_list STATIC assignment_expression SQ_CLOSE
   97                  | direct_declarator SQ_OPEN type_qualifier_list_opt STAR SQ_CLOSE
   98                  | direct_declarator PARAN_OPEN param_or_identi PARAN_CLOSE

   99 param_or_identi: parameter_type_list
  100                | identifier_list_opt

  101 type_qualifier_list_opt: epsilon
  102                        | type_qualifier_list

  103 assignment_expression_opt: epsilon
  104                          | assignment_expression

  105 identifier_list_opt: epsilon
  106                    | identifier_list

  107 pointer: STAR type_qualifier_list_opt
  108        | STAR type_qualifier_list_opt pointer

  109 type_qualifier_list: type_qualifier
  110                    | type_qualifier_list type_qualifier

  111 parameter_type_list: parameter_list
  112                    | parameter_list COMMA ELIPSIS

  113 parameter_list: parameter_declaration
  114               | parameter_list COMMA parameter_declaration

  115 parameter_declaration: declaration_specifiers declarator
  116                      | declaration_specifiers

  117 identifier_list: IDENTIFIER
  118                | identifier_list COMMA IDENTIFIER

  119 type_name: specifier_qualifier_list

  120 initializer: assignment_expression
  121            | CURLY_OPEN initializer_list CURLY_CLOSE
  122            | CURLY_OPEN initializer_list COMMA CURLY_CLOSE

  123 initializer_list: designation_opt initializer
  124                 | initializer_list COMMA designation_opt initializer

  125 designation_opt: epsilon
  126                | designation

  127 designation: designator_list EQUAL

  128 designator_list: designator
  129                | designator_list designator

  130 designator: SQ_OPEN constant_expression SQ_CLOSE
  131           | DOT IDENTIFIER

  132 primary_expression: IDENTIFIER
  133                   | constant
  134                   | STRING_LITERAL
  135                   | PARAN_OPEN expression PARAN_CLOSE

  136 constant: INTEGER_CONSTANT
  137         | FLOATING_CONSTANT
  138         | CHARACTER_CONSTANT

  139 postfix_expression: primary_expression
  140                   | postfix_expression SQ_OPEN expression SQ_CLOSE
  141                   | postfix_expression PARAN_OPEN argument_expression_list_opt PARAN_CLOSE
  142                   | postfix_expression DOT IDENTIFIER
  143                   | postfix_expression DEREF IDENTIFIER
  144                   | postfix_expression INC
  145                   | postfix_expression DEC
  146                   | PARAN_OPEN type_name PARAN_CLOSE CURLY_OPEN initializer_list CURLY_CLOSE
  147                   | PARAN_OPEN type_name PARAN_CLOSE CURLY_OPEN initializer_list COMMA CURLY_CLOSE

  148 argument_expression_list_opt: epsilon
  149                             | argument_expression_list

  150 argument_expression_list: assignment_expression
  151                         | argument_expression_list COMMA assignment_expression

  152 unary_expression: postfix_expression
  153                 | INC unary_expression
  154                 | DEC unary_expression
  155                 | unary_operator cast_expression
  156                 | SIZEOF unary_expression
  157                 | SIZEOF PARAN_OPEN type_name PARAN_CLOSE

  158 unary_operator: AND
  159               | STAR
  160               | PLUS
  161               | MINUS
  162               | TILDE
  163               | EX

  164 cast_expression: unary_expression
  165                | PARAN_OPEN type_name PARAN_CLOSE cast_expression

  166 multiplicative_expression: cast_expression
  167                          | multiplicative_expression STAR cast_expression
  168                          | multiplicative_expression BY cast_expression
  169                          | multiplicative_expression MOD cast_expression

  170 additive_expression: multiplicative_expression
  171                    | additive_expression PLUS multiplicative_expression
  172                    | additive_expression MINUS multiplicative_expression

  173 shift_expression: additive_expression
  174                 | shift_expression SL additive_expression
  175                 | shift_expression SR additive_expression

  176 relational_expression: shift_expression
  177                      | relational_expression LT shift_expression
  178                      | relational_expression GT shift_expression
  179                      | relational_expression LTE shift_expression
  180                      | relational_expression GTE shift_expression

  181 equality_expression: relational_expression
  182                    | equality_expression E relational_expression
  183                    | equality_expression NE relational_expression

  184 and_expression: equality_expression
  185               | and_expression AND equality_expression

  186 exclusive_or_expression: and_expression
  187                        | exclusive_or_expression CAP equality_expression

  188 inclusive_or_expression: exclusive_or_expression
  189                        | inclusive_or_expression OR exclusive_or_expression

  190 logical_and_expression: inclusive_or_expression
  191                       | logical_and_expression ANDAND inclusive_or_expression

  192 logical_or_expression: logical_and_expression
  193                      | logical_or_expression OROR logical_and_expression

  194 conditional_expression: logical_or_expression
  195                       | logical_or_expression Q expression COLON conditional_expression

  196 assignment_expression: conditional_expression
  197                      | unary_expression assignment_operator assignment_expression

  198 assignment_operator: EQUAL
  199                    | STAREQUAL
  200                    | BYEQUAL
  201                    | MODEQUAL
  202                    | PLUSEQUAL
  203                    | MINUSEQUAL
  204                    | SLEQUAL
  205                    | SREQUAL
  206                    | ANDEQUAL
  207                    | CAPEQUAL
  208                    | OREQUAL

  209 expression: assignment_expression
  210           | expression COMMA assignment_expression

  211 constant_expression: conditional_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
KEYWORD (258)
IDENTIFIER (259) 17 36 77 78 84 92 117 118 131 132 142 143
INTEGER_CONSTANT (260) 136
FLOATING_CONSTANT (261) 137
CHARACTER_CONSTANT (262) 138
STRING_LITERAL (263) 134
SIGN (264)
SINGLE_LINE_COMMENT (265)
MULTI_LINE_COMMENT (266)
COLON (267) 17 18 19 195
SEMI_COLON (268) 26 33 34 35 36 37 38 39
CASE (269) 18
DEFAULT (270) 19
CURLY_OPEN (271) 20 21 75 76 121 122 146 147
CURLY_CLOSE (272) 20 21 75 76 121 122 146 147
PARAN_OPEN (273) 29 30 32 33 34 35 93 98 135 141 146 147 157 165
PARAN_CLOSE (274) 29 30 31 32 33 34 35 93 98 135 141 146 147 157 165
SQ_OPEN (275) 94 95 96 97 130 140
SQ_CLOSE (276) 94 95 96 97 130 140
IF (277) 29 30
ELSE (278) 30
SWITCH (279) 31
FOR (280) 34 35
WHILE (281) 32 33
DO (282) 33
GOTO (283) 36
CONTINUE (284) 37
BREAK (285) 38
RETURN (286) 39
COMMA (287) 51 76 81 112 114 118 122 124 147 151 210
EQUAL (288) 53 83 127 198
EXTERN (289) 54
STATIC (290) 55 95 96
AUTO (291) 56
REGISTER (292) 57
VOID (293) 58
CHAR (294) 59
SHORT (295) 60
INT (296) 61
LONG (297) 62
FLOAT (298) 63
DOUBLE (299) 64
SIGNED (300) 65
UNSIGNED (301) 66
_BOOL (302) 67
_COMPLEX (303) 68
_IMAGINARY (304) 69
ENUM (305) 75 76 77
CONST (306) 85
RESTRICT (307) 86
VOLATILE (308) 87
INLINE (309) 88
STAR (310) 97 107 108 159 167
ELIPSIS (311) 112
DOT (312) 131 142
DEREF (313) 143
INC (314) 144 153
DEC (315) 145 154
SIZEOF (316) 156 157
PLUS (317) 160 171
MINUS (318) 161 172
TILDE (319) 162
EX (320) 163
AND (321) 158 185
OR (322) 189
BY (323) 168
MOD (324) 169
SL (325) 174
SR (326) 175
LT (327) 177
GT (328) 178
LTE (329) 179
GTE (330) 180
E (331) 182
NE (332) 183
CAP (333) 187
Q (334) 195
ANDAND (335) 191
OROR (336) 193
STAREQUAL (337) 199
BYEQUAL (338) 200
MODEQUAL (339) 201
PLUSEQUAL (340) 202
MINUSEQUAL (341) 203
SLEQUAL (342) 204
SREQUAL (343) 205
ANDEQUAL (344) 206
CAPEQUAL (345) 207
OREQUAL (346) 208
LOWER_THAN_ELSE (347)
RIGHT (348)
UMINUS (349)
UPLUS (350)
USTAR (351)
U (352)


Nonterminals, with rules where they appear

$accept (98)
    on left: 0
translation_unit (99)
    on left: 1 2, on right: 0 2
external_declaration (100)
    on left: 3 4, on right: 1 2
function_definition (101)
    on left: 5, on right: 3
declaration_list_opt (102)
    on left: 6 7, on right: 5
epsilon (103)
    on left: 8, on right: 7 27 42 48 73 79 90 101 103 105 125 148
declaration_list (104)
    on left: 9 10, on right: 6 10
statement (105)
    on left: 11 12 13 14 15 16, on right: 17 18 19 24 29 30 31 32 33
    34 35
labeled_statement (106)
    on left: 17 18 19, on right: 11
compound_statement (107)
    on left: 20 21, on right: 5 12
block_item_list (108)
    on left: 22 23, on right: 20 23
block_item (109)
    on left: 24 25, on right: 22 23
expression_statement (110)
    on left: 26, on right: 13
expression_opt (111)
    on left: 27 28, on right: 26 34 35 39
selection_statement (112)
    on left: 29 30 31, on right: 14
iteration_statement (113)
    on left: 32 33 34 35, on right: 15
jump_statement (114)
    on left: 36 37 38 39, on right: 16
constant_expression (115)
    on left: 40 211, on right: 18 83 130
declaration (116)
    on left: 41, on right: 4 9 10 25 35
declaration_specifiers_opt (117)
    on left: 42 43, on right: 44 45 46 47
declaration_specifiers (118)
    on left: 44 45 46 47, on right: 5 41 43 115 116
init_declarator_list_opt (119)
    on left: 48 49, on right: 41
init_declarator_list (120)
    on left: 50 51, on right: 49 51
init_declarator (121)
    on left: 52 53, on right: 50 51
storage_class_specifier (122)
    on left: 54 55 56 57, on right: 44
type_specifier (123)
    on left: 58 59 60 61 62 63 64 65 66 67 68 69 70, on right: 45 71
specifier_qualifier_list (124)
    on left: 71 72, on right: 74 119
specifier_qualifier_list_opt (125)
    on left: 73 74, on right: 71 72
enum_specifier (126)
    on left: 75 76 77, on right: 70
identifier_opt (127)
    on left: 78 79, on right: 75 76
enumerator_list (128)
    on left: 80 81, on right: 75 76 81
enumerator (129)
    on left: 82 83, on right: 80 81
enumeration_constant (130)
    on left: 84, on right: 82 83
type_qualifier (131)
    on left: 85 86 87, on right: 46 72 109 110
function_specifier (132)
    on left: 88, on right: 47
declarator (133)
    on left: 89, on right: 5 52 53 93 115
pointer_opt (134)
    on left: 90 91, on right: 89
direct_declarator (135)
    on left: 92 93 94 95 96 97 98, on right: 89 94 95 96 97 98
param_or_identi (136)
    on left: 99 100, on right: 98
type_qualifier_list_opt (137)
    on left: 101 102, on right: 94 95 97 107 108
assignment_expression_opt (138)
    on left: 103 104, on right: 94
identifier_list_opt (139)
    on left: 105 106, on right: 100
pointer (140)
    on left: 107 108, on right: 91 108
type_qualifier_list (141)
    on left: 109 110, on right: 96 102 110
parameter_type_list (142)
    on left: 111 112, on right: 99
parameter_list (143)
    on left: 113 114, on right: 111 112 114
parameter_declaration (144)
    on left: 115 116, on right: 113 114
identifier_list (145)
    on left: 117 118, on right: 106 118
type_name (146)
    on left: 119, on right: 146 147 157 165
initializer (147)
    on left: 120 121 122, on right: 53 123 124
initializer_list (148)
    on left: 123 124, on right: 121 122 124 146 147
designation_opt (149)
    on left: 125 126, on right: 123 124
designation (150)
    on left: 127, on right: 126
designator_list (151)
    on left: 128 129, on right: 127 129
designator (152)
    on left: 130 131, on right: 128 129
primary_expression (153)
    on left: 132 133 134 135, on right: 139
constant (154)
    on left: 136 137 138, on right: 133
postfix_expression (155)
    on left: 139 140 141 142 143 144 145 146 147, on right: 140 141
    142 143 144 145 152
argument_expression_list_opt (156)
    on left: 148 149, on right: 141
argument_expression_list (157)
    on left: 150 151, on right: 149 151
unary_expression (158)
    on left: 152 153 154 155 156 157, on right: 153 154 156 164 197
unary_operator (159)
    on left: 158 159 160 161 162 163, on right: 155
cast_expression (160)
    on left: 164 165, on right: 155 165 166 167 168 169
multiplicative_expression (161)
    on left: 166 167 168 169, on right: 167 168 169 170 171 172
additive_expression (162)
    on left: 170 171 172, on right: 171 172 173 174 175
shift_expression (163)
    on left: 173 174 175, on right: 174 175 176 177 178 179 180
relational_expression (164)
    on left: 176 177 178 179 180, on right: 177 178 179 180 181 182
    183
equality_expression (165)
    on left: 181 182 183, on right: 182 183 184 185 187
and_expression (166)
    on left: 184 185, on right: 185 186
exclusive_or_expression (167)
    on left: 186 187, on right: 187 188 189
inclusive_or_expression (168)
    on left: 188 189, on right: 189 190 191
logical_and_expression (169)
    on left: 190 191, on right: 191 192 193
logical_or_expression (170)
    on left: 192 193, on right: 193 194 195
conditional_expression (171)
    on left: 194 195, on right: 195 196 211
assignment_expression (172)
    on left: 196 197, on right: 95 96 104 120 150 151 197 209 210
assignment_operator (173)
    on left: 198 199 200 201 202 203 204 205 206 207 208, on right:
    197
expression (174)
    on left: 209 210, on right: 28 29 30 31 32 33 135 140 195 210


state 0

    0 $accept: . translation_unit $end

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    VOID        shift, and go to state 5
    CHAR        shift, and go to state 6
    SHORT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    FLOAT       shift, and go to state 10
    DOUBLE      shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    _BOOL       shift, and go to state 14
    _COMPLEX    shift, and go to state 15
    _IMAGINARY  shift, and go to state 16
    ENUM        shift, and go to state 17
    CONST       shift, and go to state 18
    RESTRICT    shift, and go to state 19
    VOLATILE    shift, and go to state 20
    INLINE      shift, and go to state 21

    translation_unit         go to state 22
    external_declaration     go to state 23
    function_definition      go to state 24
    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


state 1

   54 storage_class_specifier: EXTERN .

    $default  reduce using rule 54 (storage_class_specifier)


state 2

   55 storage_class_specifier: STATIC .

    $default  reduce using rule 55 (storage_class_specifier)


state 3

   56 storage_class_specifier: AUTO .

    $default  reduce using rule 56 (storage_class_specifier)


state 4

   57 storage_class_specifier: REGISTER .

    $default  reduce using rule 57 (storage_class_specifier)


state 5

   58 type_specifier: VOID .

    $default  reduce using rule 58 (type_specifier)


state 6

   59 type_specifier: CHAR .

    $default  reduce using rule 59 (type_specifier)


state 7

   60 type_specifier: SHORT .

    $default  reduce using rule 60 (type_specifier)


state 8

   61 type_specifier: INT .

    $default  reduce using rule 61 (type_specifier)


state 9

   62 type_specifier: LONG .

    $default  reduce using rule 62 (type_specifier)


state 10

   63 type_specifier: FLOAT .

    $default  reduce using rule 63 (type_specifier)


state 11

   64 type_specifier: DOUBLE .

    $default  reduce using rule 64 (type_specifier)


state 12

   65 type_specifier: SIGNED .

    $default  reduce using rule 65 (type_specifier)


state 13

   66 type_specifier: UNSIGNED .

    $default  reduce using rule 66 (type_specifier)


state 14

   67 type_specifier: _BOOL .

    $default  reduce using rule 67 (type_specifier)


state 15

   68 type_specifier: _COMPLEX .

    $default  reduce using rule 68 (type_specifier)


state 16

   69 type_specifier: _IMAGINARY .

    $default  reduce using rule 69 (type_specifier)


state 17

   75 enum_specifier: ENUM . identifier_opt CURLY_OPEN enumerator_list CURLY_CLOSE
   76               | ENUM . identifier_opt CURLY_OPEN enumerator_list COMMA CURLY_CLOSE
   77               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 8 (epsilon)

    epsilon         go to state 33
    identifier_opt  go to state 34


state 18

   85 type_qualifier: CONST .

    $default  reduce using rule 85 (type_qualifier)


state 19

   86 type_qualifier: RESTRICT .

    $default  reduce using rule 86 (type_qualifier)


state 20

   87 type_qualifier: VOLATILE .

    $default  reduce using rule 87 (type_qualifier)


state 21

   88 function_specifier: INLINE .

    $default  reduce using rule 88 (function_specifier)


state 22

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 35
    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    VOID        shift, and go to state 5
    CHAR        shift, and go to state 6
    SHORT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    FLOAT       shift, and go to state 10
    DOUBLE      shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    _BOOL       shift, and go to state 14
    _COMPLEX    shift, and go to state 15
    _IMAGINARY  shift, and go to state 16
    ENUM        shift, and go to state 17
    CONST       shift, and go to state 18
    RESTRICT    shift, and go to state 19
    VOLATILE    shift, and go to state 20
    INLINE      shift, and go to state 21

    external_declaration     go to state 36
    function_definition      go to state 24
    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


state 23

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


state 24

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


state 25

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


state 26

    5 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement
   41 declaration: declaration_specifiers . init_declarator_list_opt

    STAR  shift, and go to state 37

    $default  reduce using rule 8 (epsilon)

    epsilon                   go to state 38
    init_declarator_list_opt  go to state 39
    init_declarator_list      go to state 40
    init_declarator           go to state 41
    declarator                go to state 42
    pointer_opt               go to state 43
    pointer                   go to state 44


state 27

   44 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    VOID        shift, and go to state 5
    CHAR        shift, and go to state 6
    SHORT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    FLOAT       shift, and go to state 10
    DOUBLE      shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    _BOOL       shift, and go to state 14
    _COMPLEX    shift, and go to state 15
    _IMAGINARY  shift, and go to state 16
    ENUM        shift, and go to state 17
    CONST       shift, and go to state 18
    RESTRICT    shift, and go to state 19
    VOLATILE    shift, and go to state 20
    INLINE      shift, and go to state 21

    EXTERN      [reduce using rule 8 (epsilon)]
    STATIC      [reduce using rule 8 (epsilon)]
    AUTO        [reduce using rule 8 (epsilon)]
    REGISTER    [reduce using rule 8 (epsilon)]
    VOID        [reduce using rule 8 (epsilon)]
    CHAR        [reduce using rule 8 (epsilon)]
    SHORT       [reduce using rule 8 (epsilon)]
    INT         [reduce using rule 8 (epsilon)]
    LONG        [reduce using rule 8 (epsilon)]
    FLOAT       [reduce using rule 8 (epsilon)]
    DOUBLE      [reduce using rule 8 (epsilon)]
    SIGNED      [reduce using rule 8 (epsilon)]
    UNSIGNED    [reduce using rule 8 (epsilon)]
    _BOOL       [reduce using rule 8 (epsilon)]
    _COMPLEX    [reduce using rule 8 (epsilon)]
    _IMAGINARY  [reduce using rule 8 (epsilon)]
    ENUM        [reduce using rule 8 (epsilon)]
    CONST       [reduce using rule 8 (epsilon)]
    RESTRICT    [reduce using rule 8 (epsilon)]
    VOLATILE    [reduce using rule 8 (epsilon)]
    INLINE      [reduce using rule 8 (epsilon)]
    $default    reduce using rule 8 (epsilon)

    epsilon                     go to state 45
    declaration_specifiers_opt  go to state 46
    declaration_specifiers      go to state 47
    storage_class_specifier     go to state 27
    type_specifier              go to state 28
    enum_specifier              go to state 29
    type_qualifier              go to state 30
    function_specifier          go to state 31


state 28

   45 declaration_specifiers: type_specifier . declaration_specifiers_opt

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    VOID        shift, and go to state 5
    CHAR        shift, and go to state 6
    SHORT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    FLOAT       shift, and go to state 10
    DOUBLE      shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    _BOOL       shift, and go to state 14
    _COMPLEX    shift, and go to state 15
    _IMAGINARY  shift, and go to state 16
    ENUM        shift, and go to state 17
    CONST       shift, and go to state 18
    RESTRICT    shift, and go to state 19
    VOLATILE    shift, and go to state 20
    INLINE      shift, and go to state 21

    EXTERN      [reduce using rule 8 (epsilon)]
    STATIC      [reduce using rule 8 (epsilon)]
    AUTO        [reduce using rule 8 (epsilon)]
    REGISTER    [reduce using rule 8 (epsilon)]
    VOID        [reduce using rule 8 (epsilon)]
    CHAR        [reduce using rule 8 (epsilon)]
    SHORT       [reduce using rule 8 (epsilon)]
    INT         [reduce using rule 8 (epsilon)]
    LONG        [reduce using rule 8 (epsilon)]
    FLOAT       [reduce using rule 8 (epsilon)]
    DOUBLE      [reduce using rule 8 (epsilon)]
    SIGNED      [reduce using rule 8 (epsilon)]
    UNSIGNED    [reduce using rule 8 (epsilon)]
    _BOOL       [reduce using rule 8 (epsilon)]
    _COMPLEX    [reduce using rule 8 (epsilon)]
    _IMAGINARY  [reduce using rule 8 (epsilon)]
    ENUM        [reduce using rule 8 (epsilon)]
    CONST       [reduce using rule 8 (epsilon)]
    RESTRICT    [reduce using rule 8 (epsilon)]
    VOLATILE    [reduce using rule 8 (epsilon)]
    INLINE      [reduce using rule 8 (epsilon)]
    $default    reduce using rule 8 (epsilon)

    epsilon                     go to state 45
    declaration_specifiers_opt  go to state 48
    declaration_specifiers      go to state 47
    storage_class_specifier     go to state 27
    type_specifier              go to state 28
    enum_specifier              go to state 29
    type_qualifier              go to state 30
    function_specifier          go to state 31


state 29

   70 type_specifier: enum_specifier .

    $default  reduce using rule 70 (type_specifier)


state 30

   46 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    VOID        shift, and go to state 5
    CHAR        shift, and go to state 6
    SHORT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    FLOAT       shift, and go to state 10
    DOUBLE      shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    _BOOL       shift, and go to state 14
    _COMPLEX    shift, and go to state 15
    _IMAGINARY  shift, and go to state 16
    ENUM        shift, and go to state 17
    CONST       shift, and go to state 18
    RESTRICT    shift, and go to state 19
    VOLATILE    shift, and go to state 20
    INLINE      shift, and go to state 21

    EXTERN      [reduce using rule 8 (epsilon)]
    STATIC      [reduce using rule 8 (epsilon)]
    AUTO        [reduce using rule 8 (epsilon)]
    REGISTER    [reduce using rule 8 (epsilon)]
    VOID        [reduce using rule 8 (epsilon)]
    CHAR        [reduce using rule 8 (epsilon)]
    SHORT       [reduce using rule 8 (epsilon)]
    INT         [reduce using rule 8 (epsilon)]
    LONG        [reduce using rule 8 (epsilon)]
    FLOAT       [reduce using rule 8 (epsilon)]
    DOUBLE      [reduce using rule 8 (epsilon)]
    SIGNED      [reduce using rule 8 (epsilon)]
    UNSIGNED    [reduce using rule 8 (epsilon)]
    _BOOL       [reduce using rule 8 (epsilon)]
    _COMPLEX    [reduce using rule 8 (epsilon)]
    _IMAGINARY  [reduce using rule 8 (epsilon)]
    ENUM        [reduce using rule 8 (epsilon)]
    CONST       [reduce using rule 8 (epsilon)]
    RESTRICT    [reduce using rule 8 (epsilon)]
    VOLATILE    [reduce using rule 8 (epsilon)]
    INLINE      [reduce using rule 8 (epsilon)]
    $default    reduce using rule 8 (epsilon)

    epsilon                     go to state 45
    declaration_specifiers_opt  go to state 49
    declaration_specifiers      go to state 47
    storage_class_specifier     go to state 27
    type_specifier              go to state 28
    enum_specifier              go to state 29
    type_qualifier              go to state 30
    function_specifier          go to state 31


state 31

   47 declaration_specifiers: function_specifier . declaration_specifiers_opt

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    VOID        shift, and go to state 5
    CHAR        shift, and go to state 6
    SHORT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    FLOAT       shift, and go to state 10
    DOUBLE      shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    _BOOL       shift, and go to state 14
    _COMPLEX    shift, and go to state 15
    _IMAGINARY  shift, and go to state 16
    ENUM        shift, and go to state 17
    CONST       shift, and go to state 18
    RESTRICT    shift, and go to state 19
    VOLATILE    shift, and go to state 20
    INLINE      shift, and go to state 21

    EXTERN      [reduce using rule 8 (epsilon)]
    STATIC      [reduce using rule 8 (epsilon)]
    AUTO        [reduce using rule 8 (epsilon)]
    REGISTER    [reduce using rule 8 (epsilon)]
    VOID        [reduce using rule 8 (epsilon)]
    CHAR        [reduce using rule 8 (epsilon)]
    SHORT       [reduce using rule 8 (epsilon)]
    INT         [reduce using rule 8 (epsilon)]
    LONG        [reduce using rule 8 (epsilon)]
    FLOAT       [reduce using rule 8 (epsilon)]
    DOUBLE      [reduce using rule 8 (epsilon)]
    SIGNED      [reduce using rule 8 (epsilon)]
    UNSIGNED    [reduce using rule 8 (epsilon)]
    _BOOL       [reduce using rule 8 (epsilon)]
    _COMPLEX    [reduce using rule 8 (epsilon)]
    _IMAGINARY  [reduce using rule 8 (epsilon)]
    ENUM        [reduce using rule 8 (epsilon)]
    CONST       [reduce using rule 8 (epsilon)]
    RESTRICT    [reduce using rule 8 (epsilon)]
    VOLATILE    [reduce using rule 8 (epsilon)]
    INLINE      [reduce using rule 8 (epsilon)]
    $default    reduce using rule 8 (epsilon)

    epsilon                     go to state 45
    declaration_specifiers_opt  go to state 50
    declaration_specifiers      go to state 47
    storage_class_specifier     go to state 27
    type_specifier              go to state 28
    enum_specifier              go to state 29
    type_qualifier              go to state 30
    function_specifier          go to state 31


state 32

   77 enum_specifier: ENUM IDENTIFIER .
   78 identifier_opt: IDENTIFIER .

    CURLY_OPEN  reduce using rule 77 (enum_specifier)
    CURLY_OPEN  [reduce using rule 78 (identifier_opt)]
    $default    reduce using rule 77 (enum_specifier)


state 33

   79 identifier_opt: epsilon .
